# level1-imageclassification-cv-14

./: .gitignore  EDA.ipynb  README.md  config.json  ensemble.py  inference.py  inference_multi_label.py  parse_config.py  pyproject.toml  requirements.txt  test.py  test_config.json  train.py  train_config.json
.github/ISSUE_TEMPLATE/: feature_request.md
base/: __init__.py  base_dataset.py  base_trainer.py
data_aug_utils/: README.md  aug_age.py  aug_config.json  aug_mask.py  aug_nomask.py  data_aug.json  rm_back.py  take_data.py
data_loader/: __init__.py  data_loader.py  test_dataset.py  train_dataset.py  valid_dataset.py
model/: __init__.py  loss.py  metric.py  model.py  multi_label_model.py  multi_task_model.py
trainer/: __init__.py  multi_label_trainer.py  multi_task_trainer.py  one_task_trainer.py  trainer.py
utils/: __init__.py  aug_elder.py  aug_nomask.py  copy_files.py  data_aug.py  data_util.py  preprocess.py  util.py
